force-app/main/default/objects/Y_ll_k_zin__c/Y_ll_k_zin__c.object-meta.xml
<CustomObject>
    <label>Yıllık İzin</label>
    <nameField>
        <displayFormat>Y-{0000}</displayFormat>
        <label>Yıllık İzin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yıllık İzin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>