force-app/main/default/objects/Y_ll_k_zin__c/fields/k_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>k_Tarihi__c</fullName>
    <label>Çıkış Tarihi</label>
    <type>Date</type>
</CustomField>