force-app/main/default/objects/Y_ll_k_zin__c/fields/Kalan_zin_Say_s__c.field-meta.xml
<CustomField>
    <fullName>Kalan_zin_Say_s__c</fullName>
    <formula>Yillikizinhakki__c   -  Kullan_lan_zin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kalan İzin Sayısı</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>