force-app/main/default/objects/Y_ll_k_zin__c/fields/Kullan_lan_zin__c.field-meta.xml
<CustomField>
    <fullName>Kullan_lan_zin__c</fullName>
    <label>Kaç Günlük</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>