force-app/main/default/objects/Y_ll_k_zin__c/fields/Personel__c.field-meta.xml
<CustomField>
    <fullName>Personel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personel</label>
    <referenceTo>Personel__c</referenceTo>
    <relationshipLabel>Yıllık İzin</relationshipLabel>
    <relationshipName>Y_ll_k_zin</relationshipName>
    <type>Lookup</type>
</CustomField>