force-app/main/default/objects/Y_ll_k_zin__c/fields/Var_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Var_Tarihi__c</fullName>
    <label>Varış Tarihi</label>
    <type>Date</type>
</CustomField>