force-app/main/default/objects/Y_ll_k_zin__c/fields/Yillikizinhakki__c.field-meta.xml
<CustomField>
    <fullName>Yillikizinhakki__c</fullName>
    <formula>IF( TODAY()  -  Personel__r.Giris__c  &gt;= 365, 14, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yıllık İzin Hakkı</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>