force-app/main/default/objects/Y_ll_k_zin__c/validationRules/izin_hakki.validationRule-meta.xml
<ValidationRule>
    <fullName>izin_hakki</fullName>
    <active>true</active>
    <errorConditionFormula>k_Tarihi__c  -  Var_Tarihi__c  &lt; 15</errorConditionFormula>
    <errorMessage>Yıllık izin süresi 15 günden fazla olamaz</errorMessage>
</ValidationRule>