force-app/main/default/objects/Y_ll_k_zin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Personel__c</columns>
    <columns>Yillikizinhakki__c</columns>
    <columns>Kullan_lan_zin__c</columns>
    <columns>Kalan_zin_Say_s__c</columns>
    <columns>k_Tarihi__c</columns>
    <columns>Var_Tarihi__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>